# Otus

./: .gitignore  .gitmodules  Doxyfile  annotated.html  annotated_dup.js  classes.html  dir_11d3e6d4dcca1858cd088c42ff1760dd.html  dir_11d3e6d4dcca1858cd088c42ff1760dd.js  dir_11d3e6d4dcca1858cd088c42ff1760dd_dep.map  dir_11d3e6d4dcca1858cd088c42ff1760dd_dep.md5  dir_25111f0b81f5cdfd568d0ab5df884774.html  dir_25111f0b81f5cdfd568d0ab5df884774.js  dir_4a0b3d57b473d367e7209674c7d79232.html  dir_4a0b3d57b473d367e7209674c7d79232.js  dir_569f8c2f8e2e08e97c8c8343e0a35de4.html  dir_569f8c2f8e2e08e97c8c8343e0a35de4.js  dir_569f8c2f8e2e08e97c8c8343e0a35de4_dep.map  dir_569f8c2f8e2e08e97c8c8343e0a35de4_dep.md5  dir_784e75ddc95a0c65328f2acc1fcd1d15.html  dir_784e75ddc95a0c65328f2acc1fcd1d15.js  dir_784e75ddc95a0c65328f2acc1fcd1d15_dep.map  dir_784e75ddc95a0c65328f2acc1fcd1d15_dep.md5  dir_8bbecb289360ce2507c0926d28e0043f.html  dir_8bbecb289360ce2507c0926d28e0043f.js  dir_8bbecb289360ce2507c0926d28e0043f_dep.map  dir_8bbecb289360ce2507c0926d28e0043f_dep.md5  dir_9ffde859704239cc805fb9ca686bae06.html  dir_9ffde859704239cc805fb9ca686bae06.js  dir_bb449bb6ed583316d3c2c142c08c884e.html  dir_bb449bb6ed583316d3c2c142c08c884e.js  dir_bb449bb6ed583316d3c2c142c08c884e_dep.map  dir_bb449bb6ed583316d3c2c142c08c884e_dep.md5  dir_bb87f83a2b0eebfe181bda57c01e2e7d.html  dir_bb87f83a2b0eebfe181bda57c01e2e7d.js  dir_bb87f83a2b0eebfe181bda57c01e2e7d_dep.map  dir_bb87f83a2b0eebfe181bda57c01e2e7d_dep.md5  dir_bc6e7e101ca19083eaa3567cd6cd0fbd.html  dir_bc6e7e101ca19083eaa3567cd6cd0fbd.js  dir_be0767ef4726d2e314ff434f90e2524f.html  dir_be0767ef4726d2e314ff434f90e2524f.js  (+108 more)
.github/workflows/: homework-01.yml  homework-02.yml  homework-04.yml  homework-05.yml  homework-07.yml  homework-08.yml  homework-09.yml
d0/d06/: classhomework__05_1_1ConsoleCoordinate2DComponentHandler__coll__graph.map
d0/d12/: classhomework__05_1_1ShapeComponent__coll__graph.map  classhomework__05_1_1ShapeComponent__coll__graph.md5
d0/d26/: yaml__entity__component__serializer_8h.html  yaml__entity__component__serializer_8h.js  yaml__entity__component__serializer_8h_source.html
d0/d29/: console__component__handler_8h.html  console__component__handler_8h.js  console__component__handler_8h_source.html
d0/d48/: classhomework__05_1_1RectangleComponent__inherit__graph.map  classhomework__05_1_1RectangleComponent__inherit__graph.md5  matrix_8hpp__incl.map  matrix_8hpp__incl.md5
d0/d4b/: entity_8h__dep__incl.map  entity_8h__dep__incl.md5
d0/d58/: classhomework__06_1_1ValueHolderViewBase-members.html
d0/d5b/: console__toolset_8h__dep__incl.map  console__toolset_8h__dep__incl.md5
d0/d64/: classhomework__05_1_1ComponentHandlerFactory-members.html
d0/d66/: classhomework__08_1_1HashValue.html  classhomework__08_1_1HashValue.js
d0/d71/: classhomework__06_1_1Matrix-members.html
d0/d76/: classhomework__05_1_1EntityComponentSerializer.html  classhomework__05_1_1EntityComponentSerializer.js
d0/d7f/: classhomework__06_1_1MatrixHolder_1_1ValueHolderView.html  classhomework__06_1_1MatrixHolder_1_1ValueHolderView.js
d0/d84/: classhomework__05_1_1ComponentHandlerFactory__inherit__graph.map  classhomework__05_1_1ComponentHandlerFactory__inherit__graph.md5
d0/d8e/: structhomework__04_1_1out__tuple.html  structhomework__04_1_1out__tuple.js
d0/d95/: async_8cpp.html  async_8cpp.js  async_8cpp_source.html
d0/d9e/: classhomework__05_1_1RectangleComponent.html  classhomework__05_1_1RectangleComponent.js
d0/da3/: homework-09_2bulk_8cpp__incl.map  homework-09_2bulk_8cpp__incl.md5
d0/dbb/: classhomework__06_1_1MatrixConstIterator-members.html
d0/dcb/: homework-06_2CMakeLists_8txt.html
d0/dd9/: homework-06_2main_8cpp__incl.map  homework-06_2main_8cpp__incl.md5
d0/dde/: homework-08_2main_8cpp.html  homework-08_2main_8cpp.js  homework-08_2main_8cpp_source.html
d0/de7/: classhomework__05_1_1Coordinate2DComponentSerializer__coll__graph.md5  component__handler_8h.html  component__handler_8h.js  component__handler_8h_source.html
d1/d0e/: homework-07_2bulk_8h.html  homework-07_2bulk_8h.js  homework-07_2bulk_8h_source.html
d1/d1c/: classhomework__07_1_1BulkFileWriter-members.html
d1/d1f/: editor_8cpp.html  editor_8cpp_source.html
d1/d20/: homework-09_2bulk_8h.html  homework-09_2bulk_8h.js  homework-09_2bulk_8h_source.html
d1/d39/: print__ip_8hpp__dep__incl.map  print__ip_8hpp__dep__incl.md5
d1/d3d/: classhomework__05_1_1Editor.html  classhomework__05_1_1Editor.js
d1/d42/: homework-07_2bulk_8cpp.html  (+1 more)
d1/ded/: entity_8h__incl.map  (+1 more)
homework-01/: CMakeLists.txt  lib.cpp  lib.h  main.cpp  test_version.cpp  version.h.in
homework-02/: CMakeLists.txt  ip_filter.cpp  ip_filter.h  ip_filter_test.cpp  mail.cpp
homework-03/: CMakeLists.txt  main.cpp  my_allocator.hpp  my_container.hpp
homework-04/: CMakeLists.txt  Doxyfile  main.cpp  print_ip.hpp
homework-05/: CMakeLists.txt  common_types.h  component.cpp  component.h  component_handler.h  console_component_handler.cpp  console_component_handler.h  console_toolset.cpp  console_toolset.h  editor.cpp  editor.h  entity.cpp  entity.h  entity_component_serializer.h  entity_factory.cpp  entity_factory.h  main.cpp  toolset.cpp  toolset.h  yaml_entity_component_serializer.cpp  yaml_entity_component_serializer.h
homework-06/: CMakeLists.txt  main.cpp  matrix.hpp
homework-07/: CMakeLists.txt  bulk.cpp  bulk.h  main.cpp
homework-08/: CMakeLists.txt  README.md  bayan.cpp  bayan.h  main.cpp
homework-09/: CMakeLists.txt  async.cpp  async.h  bulk.cpp  bulk.h  main.cpp
search/: all_0.js  all_1.js  all_10.js  all_11.js  all_12.js  all_13.js  all_14.js  all_15.js  all_16.js  all_17.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_1.js  classes_2.js  classes_3.js  classes_4.js  classes_5.js  classes_6.js  classes_7.js  classes_8.js  classes_9.js  classes_a.js  classes_d.js  classes_e.js  defines_1.js  defines_2.js  defines_3.js  (+62 more)
timus/problem_1656/: CMakeLists.txt  main.cpp
(+479 files in other folders)
